更新命名空间，查询结果首行添加快递公司信息

--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "name": "96qbhy/vbot-express",
     "description": "简单的快递查询接口。",
     "license": "MIT",
+    "version": "1.0.0",
     "authors": [
         {
             "name": "96qbhy",
@@ -16,7 +17,7 @@
     },
     "autoload": {
         "psr-4": {
-            "Qbhy\\VbotExpress\\": "src/"
+            "Vbot\\Express\\": "src/"
         }
     }
 }
