更改项目名字

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "96qbhy/vbot-express",
+    "name": "vbot/express",
     "description": "简单的快递查询接口。",
     "license": "MIT",
     "authors": [
